[gd_scene load_steps=5 format=3 uid="uid://dm6c4ebqlkghn"]

[ext_resource type="Script" uid="uid://dje8wjhu2p5w7" path="res://Assets/Message_app/text_contact_template.gd" id="1_1ghwi"]
[ext_resource type="Theme" uid="uid://7xe3ua6la8hr" path="res://new_theme.tres" id="1_pnq1t"]
[ext_resource type="Texture2D" uid="uid://c6h107ugrt2vw" path="res://Art/img/contact_icon_custom.png" id="3_n6rpu"]
[ext_resource type="AudioStream" uid="uid://cyytgar4i50tw" path="res://audio/SFX/backBtnSound.wav" id="4_lrtew"]

[node name="TextContactTemplate" type="Button"]
custom_minimum_size = Vector2(0, 75)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_pnq1t")
script = ExtResource("1_1ghwi")
scene = "res://templates/text_template.tscn"
cont_name = "Contact"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContactIcon" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_n6rpu")
stretch_mode = 4

[node name="Initial" type="Label" parent="HBoxContainer/ContactIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.862745, 1)
theme_override_colors/font_shadow_color = Color(0.462745, 0.462745, 0.462745, 1)
theme_override_font_sizes/font_size = 30
text = "C"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 14.0

[node name="ContactName" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Contact Name"

[node name="LastMessage" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
clip_text = true
text_overrun_behavior = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lrtew")
bus = &"SFX"

[connection signal="pressed" from="." to="." method="_on_pressed"]
